Adjust messages layout to prevent overflow (#5925)
* fix: adjust layout constraints for message components

* fix: remove unused styles and clean style usage to scss file

--- a/play/src/front/style/chat.scss
+++ b/play/src/front/style/chat.scss
@@ -53,150 +53,6 @@
     }
 }
 
-.wa-message{
-    .actions{
-        visibility: hidden;
-        justify-content: space-between;
-        .action{
-            cursor: pointer;
-            opacity: 0.8;
-            position: relative;
-            .caption{
-                @apply absolute bg-dark-blue px-2 py-1 rounded-xl border-lighter-purple border border-solid;
-                display: none;
-                top: -32px;
-                left: 50%;
-                transform: translateX(-50%);
-                z-index: 10;
-                &::before{
-                    @apply absolute border-t-lighter-purple;
-                    left: calc( 50% - 10px );
-                    top: 100.5%;
-                    content: '';
-                    width: 0;
-                    height: 0;
-                    border-left: 9px solid transparent;
-                    border-right: 9px solid transparent;
-                    border-top-width: 6px;
-                    border-top-style: solid;
-                }
-                &::after{
-                    @apply absolute border-t-dark-blue;
-                    margin-left: -50%;
-                    top: 100%;
-                    content: '';
-                    width: 0;
-                    height: 0;
-                    border-left: 7px solid transparent;
-                    border-right: 7px solid transparent;
-                    border-top-width: 5px;
-                    border-top-style: solid;
-                }
-            }
-            &:hover{
-                opacity: 1;
-                .caption{
-                    display: block;
-                }
-            }
-        }
-    }
-    &:hover{
-        .actions{
-            visibility: visible;
-        }
-    }
-}
-.wa-message-body{
-    @apply rounded-lg bg-dark text-xs px-3 py-2 text-left;
-    p{
-        @apply whitespace-pre-line;
-        margin: 0;
-        .mention{
-            margin: 0 2px;
-            padding: 0px 4px;
-            background-color: black;
-            border-radius: 0.5rem;
-            cursor: pointer;
-        }
-    }
-
-    .file {
-        @apply mt-1;
-        position: relative;
-        &:hover {
-            .actions {
-                display: flex;
-            }
-        }
-
-        .actions {
-            display: none;
-            position: absolute;
-            top: 0px;
-            padding: 0px;
-            cursor: pointer;
-            flex-direction: column;
-            border-radius: 0.25rem;
-            border-width: 1px;
-            border-style: solid;
-            --border-opacity: 1;
-            border-color: rgb(77 75 103 / var(--border-opacity));
-            background-color: rgb(27 27 41 / 0.95);
-            font-size: 0.75rem;
-            line-height: 1rem;
-            font-weight: 500;
-            color: rgb(255 255 255 / var(--text-opacity));
-            --shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-            --shadow-colored: 0 10px 15px -3px var(--shadow-color), 0 4px 6px -4px var(--shadow-color);
-            box-shadow: var(--ring-offset-shadow, 0 0 #0000), var(--ring-shadow, 0 0 #0000), var(--shadow);
-            z-index: 1;
-
-            .action {
-                display: flex;
-                flex-direction: row;
-                align-items: center;
-                padding: 4px;
-                border-radius: 0.15rem;
-
-                & > span {
-                    display: none;
-                }
-
-                &:hover {
-                    --bg-opacity: 1;
-                    background-color: rgb(77 75 103 / var(--bg-opacity));
-                }
-            }
-
-            &:hover {
-                span.action > span {
-                    display: block;
-                }
-            }
-        }
-
-        .other-content {
-            @apply p-0.5 cursor-pointer rounded mr-0.5;
-            position: relative;
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            --bg-opacity: 1;
-            border: solid 1px rgb(77 75 103 / var(--bg-opacity));
-            &:hover {
-                background-color: rgb(77 75 103 / var(--bg-opacity));
-            }
-            .icon{
-            }
-        }
-
-        audio {
-            max-width: 100%;
-        }
-    }
-}
-
 .selected {
     .wa-message{
         &::after{
@@ -254,4 +110,52 @@
 .server-icon.sync:after {
     content: "";
     @apply absolute top-0 right-0 w-3 h-3 bg-green-500 rounded-full;
+}
+
+
+.response .message-bubble p:last-of-type {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+}
+.message-bubble *:first-child {
+    margin-top: 0;
+}
+.message-bubble *:last-child {
+    margin-bottom: 0;
+}
+.message-bubble a {
+    text-decoration: underline;
+    opacity: 0.75;
+}
+pre {
+    margin: 0;
+}
+.message-bubble pre code {
+    display: block;
+    background-color: #303030;
+}
+.message-bubble code {
+    width: 100%;
+    padding: 0.25em 0.5em;
+    border-radius: 8px;
+    overflow-x: auto;
+    padding: 0.2em 0.5em;
+}
+::-webkit-scrollbar {
+    width: 2px;
+    height: 6px;
+}
+
+/* Track */
+/* Track */
+::-webkit-scrollbar-track {
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: rgba(255, 255, 255, 0.5);
+    border-radius: 3px;
 }
